complete all banner elements

--- a/index.html
+++ b/index.html
@@ -27,7 +27,53 @@
     </header>
 
     <main>
-      <div id="banner"></div>
+      <div id="banner">
+        <img src="src/singleLeaf.png" alt="Leaf" id="singleLeaf-overlay" />
+        <img src="src/red-ghost.png" alt="Red Ghost" id="red-ghost-overlay" />
+        <img src="src/ghost.png" alt="Ghost" id="ghost-overlay" />
+        <img src="src/leaf.png" alt="Leaf" id="leaf-overlay" />
+        <img src="src/mobile.svg" alt="Mobile" id="mobile-overlay" />
+        <img
+          src="src/yellow-semi-circle.png"
+          alt="Yellow Circle"
+          id="yellow-circle-overlay"
+        />
+        <img
+          src="src/orange-semi-circle.png"
+          alt="Orange Circle"
+          id="orange-circle-overlay"
+        />
+        <img
+          src="src/blue-semi-circle.png"
+          alt="Blue Circle"
+          id="blue-circle-overlay"
+        />
+        <img
+          src="src/blue-ghost.png"
+          alt="Blue Ghost"
+          id="blue-ghost-overlay"
+        />
+        <img
+          src="src/appleStoreIcon.svg"
+          alt="Apple Store Icon"
+          id="apple-store-overlay"
+        />
+
+        <div id="five-star-container-overlay">
+          <img class="star-icon" src="src/starIcon.svg" alt="Star Icon" />
+          <img class="star-icon" src="src/starIcon.svg" alt="Star Icon" />
+          <img class="star-icon" src="src/starIcon.svg" alt="Star Icon" />
+          <img class="star-icon" src="src/starIcon.svg" alt="Star Icon" />
+          <img class="star-icon" src="src/starIcon.svg" alt="Star Icon" />
+        </div>
+
+        <div id="banner-title-overlay">Ahead App</div>
+        <div id="banner-sub-title-overlay">
+          Master Your life by <br />
+          mastering emotions
+        </div>
+        <div id="review-count-overlay">100+ Appstore reviews</div>
+      </div>
     </main>
 
     <footer>
